2011-12-28  Tao Liu  <taoliu@jimmy.harvard.edu>
	MACS version 2.0.10 (tag:alpha still working)

	* Speed up p-value and q-value calculation

	This part is ten times faster now. I am using a dictionary to
	cache p-value results from Poisson CDF function. A bit more memory
	will be used to increase speed. I hope this dictionary would not
	explode since the possible pairs of ChIP signal and control lambda
	are hugely redundant. Also, I rewrited part of q-value
	calculation.

	* Speed up peak detection

	This part is about hundred of times faster now.  Optimizations
	include using Numpy functions as much as possible, and making loop
	body as small as possible.

	* Post-processing on differential calls

	After macs2diff finds differential binding sites between two
	conditions, it will try to annotate the peak calls from one of two
	conditions, describe the changes ...

	* Fragment size prediction in macs2diff

	Now by default, macs2diff will try to use the average fragment
	size from both condition 1 and condition 2 for tag extension and
	peak calling. Previously, by default, it will use different sizes
	unless --nomodel is specified.

	Technically, I separate model building processes out. So macs2diff
	will build fragment sizes for condition 1 and 2 in parallel (2
	processes maximum), then perform 4-way comparisons in parallel (4
	processes maximum).

	* Diff score

	Combine two p/qscore tracks together. At regions where condition 1
	is higher than condition 2, score would be positive, otherwise,
	negative.

2011-11-2  Tao Liu  <taoliu@jimmy.harvard.edu>
	MACS version 2.0.9 (tag:alpha)

	* Auto fixation on predicted d is turned off by default!

	Previous --off-auto is now default. MACS will not automatically
	fix d less than 2 times of tag size according to
	--shiftsize. While tag size is getting longer nowadays, it would
	be easier to have d less than 2 times of tag size, however d may
	still be meaningful and useful. Please judge it using your own
	wisdom.
